# euler-solver

./: analyze_resolution.py  compressible_solver.py  data_generator.py  data_generator_parallel.py  data_generator_v2.py  euler_ns_dataset.py  generate_training_data.py  inspect_data.py  launch_parallel.sh  main.py  merge_h5.py  pyproject.toml  run_quadrants.py  solver.py  solver_2d_ns_euler_midpoint.py  spectral_2d_euler_ns.py  verify_solver_comprehensive.py  verify_viscosity.py  viscosity_experiment.py  visualize_high_freq_trajectories.py  visualize_simple.py  visualize_trajectories.py
test_results/RUN_20260117_130626/init_0/: trajectory.h5
test_results/RUN_20260117_130811/init_0/: trajectory.h5
test_results/RUN_20260117_130904/init_0/: trajectory.h5
test_results/RUN_20260117_131531/init_0/: trajectory.h5
test_results/RUN_20260117_131624/init_0/: trajectory.h5
test_results/RUN_20260117_131710/init_0/: trajectory.h5
test_results/RUN_20260117_132242/init_0/: trajectory.h5
test_results/RUN_20260117_132343/init_0/: trajectory.h5
test_results/RUN_20260117_132514/init_0/: trajectory.h5
test_results/RUN_20260117_132614/init_0/: trajectory.h5
test_results/RUN_20260117_133147/init_0/: trajectory.h5
test_results/RUN_20260117_133718/init_0/: trajectory.h5
